# llm-backfire-interp

./: .gitignore  README.md  RESEARCH_SUMMARY.md  pyproject.toml
lambda/: WORKFLOW.md  run_adjective_compliance.sh  run_all.sh  run_contrast_probe.sh  run_pleading_compliance.sh  run_plutchik_compliance.sh  run_prompt_attention.sh  run_sensitivity_reasoning.sh  run_smiley_compliance.sh  run_threatening_compliance.sh  setup.sh
notebooks/: 01_explore_bbq.ipynb
scripts/: _backfire_act_analysis.py  _backfire_activation_diff_plot.py  _backfire_control_nudge.py  _backfire_logit_analysis.py  _backfire_stereotype_check.py  _backfire_threshold.py  _layer_ablation_all_categories.py  _layer_ablation_stereotype.py  _logit_lens_backfire.py  _mean_logits.py  _strict_backfire_corrected.py  analyze.py  analyze_adjective_compliance.py  analyze_assertiveness_circuits.py  analyze_contrast_probe_binary.py  analyze_contrast_probe_threeway.py  analyze_contrast_probe_transfer.py  analyze_ladder_dose_response.py  analyze_pleading_compliance.py  analyze_plutchik_compliance.py  analyze_prompt_attention.py  analyze_sensitivity.py  analyze_sensitivity_reasoning.py  analyze_smiley_compliance.py  analyze_threatening_compliance.py  baseline_layer_ablation.py  causal_compliance_steering.py  collect_adjective_ladder.py  collect_cache.py  collect_contrast_probe_binary.py  collect_contrast_probe_threeway.py  collect_cue_acts.py  collect_ladder_acts.py  collect_matched_cue_acts.py  collect_pleading_ladder.py  collect_plutchik_ladder.py  collect_prompt_attention.py  collect_smiley_ladder.py  (+22 more)
(+13 files in other folders)
