[project]
name = "mech-interp-bbq"
version = "0.1.0"
description = "Mechanistic interpretability: activation probes on the BBQ bias benchmark using TransformerLens"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "transformer-lens>=2.11.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "tqdm>=4.66.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.33",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "ipywidgets>=8.1.0",
    "huggingface-hub>=0.25.0",
    "circuitsvis>=1.43.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mech_interp_bbq"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
